# nextcloud-scim-connector

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  authentik_scim_mapping.py  docker-compose.example.yml  pyproject.toml  test.py
.github/workflows/: build-test-image.yml  build.yml  test.yml
src/nc_scim/: __init__.py  forwarder.py  mappings.py  models.py  receiver.py
tests/: Dockerfile.nctest  docker-compose.yml  healthcheck.sh  nextcloud-instructions.txt  prep-users-and-groups.sh  test_config.yml  test_receiver.py
