[project]
name = "nc-scim"
version = "0.1.0"
description = "SCIM connector for Nextcloud"
authors = [
    {name = "Mase3206",email = "35052448+Mase3206@users.noreply.github.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">3.13,<4.0"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "scim2-models (>=0.5.0,<0.6.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "requests (>=2.32.5,<3.0.0)",
    "xmltodict (>=0.15.1,<0.16.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
